# s2script

./: .gitignore  .gitmodules  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  package-lock.json  package.json  tsconfig.base.json
.cargo/: config.toml
.changeset/: README.md  admin-groups-immunity.md  b1-b2-toolchain.md  changeteam-fov.md  chat-auto-color-space.md  checktransmit-slice.md  command-reply-source.md  config-gen-cli.md  config-sections-validation.md  config.json  contract-grammar.md  cs2-tsdoc-intellisense.md  cs2-weapon-object.md  e1-entity-ref-host-id.md  entity-lifecycle-listeners.md  entity-name.md  initial-npm-release.md  l1-lifecycle-v2.md  net-sockets.md  player-respawn-cs2.md  round-control-cs2.md  s2s-create-live-version-resolution.md  sdk-drop-adm-zip.md  sdk-dual-resolve.md  sdk-interactive-cli.md  sdk-octet-stream-deploy.md  sdk-tsdoc-intellisense.md  sound-slice.md  switchteam.md  translations.md  usercmd.md  usermsg-hook.md  voice-control.md  zones-operator-polish.md  zones-real-triggers.md
.github/workflows/: _build.yml  changesets.yml  ci-js.yml  ci-native.yml  ci.yml  release.yml
.superpowers/sdd/: task-8-report.md
core/: Cargo.toml  build.rs
core/config-templates/: admin_groups.json  admin_overrides.json  admins.json  databases.json
core/src/: async_rt.rs  config.rs  cookies.rs  db.rs  entity.rs  entity_live.rs  event_mux.rs  ffi.rs  http.rs  interfaces.rs  lib.rs  liveness.rs  loader.rs  multiplexer.rs  net.rs  owner_stores.rs  plugin.rs  schema.rs  schema_catalog.rs  sqldb.rs  v8host.rs  ws.rs
core/src/crash/: breadcrumb.rs  config.rs  dedup.rs  envelope.rs  mod.rs  panic_hook.rs  spool.rs  uploader.rs
disabled/funvotes/: package.json
disabled/funvotes/src/: plugin.ts
disabled/nextmap/: package.json
disabled/nextmap/src/: plugin.ts
disabled/nominations/: package.json
disabled/rockthevote/: package.json
docker/: docker-compose.gate.yml  docker-compose.yml  patch-gameinfo.sh  pre.sh  s2script.vdf
docs/: ARCHITECTURE.md  BUILDING.md  INSTALL.md  PROGRESS.md  re-strategy.md  sdk-doc-conventions.md
examples/admin-groups-demo/: package.json
examples/beam-demo/: package.json
examples/beam-demo/src/: plugin.ts
examples/changeteam-demo/: package.json
examples/clientlist-convar-mapstart-demo/: package.json
examples/clientprefs-demo/: package.json
examples/clients-demo/: package.json
examples/cookbook/: package.json
examples/crash-test/: package.json
examples/db-demo/: package.json
examples/db-remote-demo/: package.json
examples/demo-plugin/: package.json
examples/ekv-demo/: package.json
examples/entity-listeners-demo/: package.json
examples/entity-name-demo/: package.json
examples/entity-playground/: package.json
examples/entityio-demo/: package.json
examples/entref-consumer/: package.json
examples/entref-producer/: api.d.ts  package.json
examples/gamerules-usermsg-demo/: package.json
examples/greeter-consumer/: package.json
examples/greeter-plugin/: api.d.ts  package.json
examples/hello-plugin/: package.json
examples/http-demo/: package.json
examples/items-demo/: package.json
examples/liveness-gate/: package.json
examples/menu-demo/: package.json
examples/monorepo-plugin/: README.md  package.json  tsconfig.json
examples/net-demo/: package.json
examples/respawn-demo/: package.json
examples/round-control-demo/: package.json
examples/s2bench/: package.json
examples/schema-dump/: package.json
examples/sound-demo/: package.json
examples/switchteam-demo/: package.json
examples/trace-demo/: package.json
examples/translations-demo/: package.json
examples/transmit-demo/: package.json
examples/usercmd-demo/: package.json
examples/usermsg-demo/: package.json
examples/voice-demo/: package.json
examples/weapon-demo/: package.json
examples/ws-demo/: package.json
examples/zones-consumer-demo/: package.json  tsconfig.json
examples/zones-spike/: package.json
gamedata/: core.gamedata.jsonc
games/cs2/: Cargo.toml  codegen-classes.json  nav-targets.json
licenses/: Apache-2.0.txt  NOTICE  README.md  licenses.txt
plugins/adminhelp/: package.json
plugins/adminmenu/: package.json
plugins/antiflood/: package.json
plugins/basebans/: package.json
plugins/basechat/: package.json
plugins/basecomm/: package.json
plugins/basecommands/: package.json
plugins/basetriggers/: package.json
plugins/basevotes/: package.json
plugins/clientprefs/: package.json
plugins/db-demo/: package.json
plugins/entityio-demo/: package.json  tsconfig.json
plugins/funcommands/: package.json
plugins/gamerules-usermsg-demo/: package.json
plugins/http-demo/: package.json
plugins/menu-demo/: package.json
plugins/playercommands/: package.json
plugins/reservedslots/: package.json
plugins/ws-demo/: package.json
plugins/zones/: package.json  tsconfig.json
plugins/zones-lib/: package.json
scripts/: bootstrap-npm-trusted-publishing.sh  build-base-plugins.sh  build-sniper.sh  check-activity-test.sh  check-antiflood-test.sh  check-core-boundary.sh  check-core-names.sh  check-csitem-generated.sh  check-doc-coverage.mjs  check-events-generated.sh  check-examples-coverage.sh  check-examples-typecheck.sh  check-licenses-generated.sh  check-nav-generated.sh  check-plugins-typecheck.sh  check-schema-generated.sh  ci-js.sh  ci-native.sh  extract-csitem.mjs  extract-event-catalog.mjs  gate.sh  gen-licenses.sh  package-addon.sh  package-release.sh  publish-packages.sh  rcon  rcon.py  registry-smoke.sh  test-boundary-nameleak.sh  test-gate.sh  test-sigscan.sh
shim/: CMakeLists.txt
shim/include/: s2script_core.h
shim/src/: crash_handler.cpp  crash_handler.h  crash_selftest.cpp  detour.cpp  detour.h  ekv.cpp  ekv.h  entity_listener.cpp  gamedata.cpp  gamedata.h  s2script_mm.cpp  s2script_mm.h  sigscan.cpp  sigscan.h  tier1_shims.cpp  trace.cpp  trace.h  vtable.cpp  vtable.h
shim/src/sdk_stubs/: entitydatainstantiator.h  network_connection.pb.h
shim/tests/: sigscan_test.cpp
tools/crash-test/: package.json
tools/s2bench/: package.json
(+317 files in other folders)
